--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   "dependencies": {
     "discord.js": "^12.3.1",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "node-nlp": "^4.11.1",
+    "redis": "^3.0.2"
   },
   "devDependencies": {
+    "csv-parse": "^4.12.0",
+    "fs-extra": "^9.0.1",
     "nodemon": "^2.0.4"
   }
 }
